Remove term filter, add applicationNumber filter
