# src/api/v1/db/oracledb/onbase-dao.js
@@ -64,11 +64,11 @@ const personNotExist = async (connection, osuId) => {
  * Return admission record of a person
  *
  * @param {string} osuId OSU ID
- * @param {string} term term code
+ * @param {string} applicationNumber application number
  * @returns {Promise<object|HttpError>} Promise object represents a serialized admission record or a
  *                                      HTTP error if error string is not null
  */
-const getAdmission = async (osuId, term) => {
+const getAdmission = async (osuId, applicationNumber) => {
   const connection = await getConnection();
   try {
     const errorMessage = await personNotExist(connection, osuId);
@@ -85,7 +85,7 @@ const getAdmission = async (osuId, term) => {
       throw createError(400, errorString);
     }
 
-    const serializedAdmission = serializeAdmission(lines, osuId, term);
+    const serializedAdmission = serializeAdmission(lines, osuId, applicationNumber);
 
     return serializedAdmission;
   } finally {
